# murder_mystery_crewai

./: README.md  pyproject.toml  report.md
src/first_project/: crew.py  main.py
src/first_project/config/: agents.yaml  tasks.yaml
